--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.2.23",
     "@types/react-dom": "18.2.8",
     "autoprefixer": "10.4.16",
+    "capacitor-plugin-safe-area": "^2.0.5",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.3",
     "next": "13.5.3",
