--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@capacitor/android": "^5.4.1",
     "@capacitor/core": "^5.4.1",
     "@capacitor/ios": "^5.4.1",
+    "@material-tailwind/react": "^2.1.2",
     "@types/node": "20.7.0",
     "@types/react": "18.2.23",
     "@types/react-dom": "18.2.8",
