--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/core": "^5.4.1",
     "@capacitor/ios": "^5.4.1",
     "@material-tailwind/react": "^2.1.2",
+    "@reduxjs/toolkit": "^1.9.6",
     "@types/node": "20.7.0",
     "@types/react": "18.2.23",
     "@types/react-dom": "18.2.8",
@@ -26,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.2",
     "react-select": "^5.7.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
