--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@capacitor/ios": "^5.4.1",
     "@material-tailwind/react": "^2.1.2",
     "@reduxjs/toolkit": "^1.9.6",
+    "@tanstack/react-query": "^4.35.7",
+    "@tanstack/react-query-devtools": "^4.35.7",
     "@types/node": "20.7.0",
     "@types/react": "18.2.23",
     "@types/react-dom": "18.2.8",
@@ -33,6 +35,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@capacitor/cli": "^5.4.1"
+    "@capacitor/cli": "^5.4.1",
+    "@tanstack/eslint-plugin-query": "^4.34.1"
   }
 }
