--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@capacitor/android": "^5.4.1",
     "@capacitor/core": "^5.4.1",
     "@capacitor/ios": "^5.4.1",
+    "@capacitor/keyboard": "^5.0.6",
     "@material-tailwind/react": "^2.1.2",
     "@reduxjs/toolkit": "^1.9.6",
     "@tanstack/react-query": "^4.35.7",
