--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_API_URL="http://localhost:3001/api"
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_dYoqTnHjCOM5YwGbYn13rCuz00Rr8n0sJA"
+NEXT_PUBLIC_STRIPE_SECRET_KEY="sk_test_tMh5UoZZAh1KzBHpSVXZanJk00hfDJaIX1"
