--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@capacitor/keyboard": "^5.0.6",
     "@material-tailwind/react": "^2.1.2",
     "@reduxjs/toolkit": "^1.9.6",
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.7",
     "@tanstack/react-query": "^4.35.7",
     "@tanstack/react-query-devtools": "^4.35.7",
     "@types/node": "20.7.0",
@@ -25,13 +27,14 @@
     "capacitor-plugin-safe-area": "^2.0.5",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.3",
-    "next": "13.5.3",
+    "next": "^13.5.3",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
     "react-select": "^5.7.5",
+    "stripe": "^13.8.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
