--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
     "react-select": "^5.7.5",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "stripe": "^13.8.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
