--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/core": "^5.4.1",
     "@capacitor/ios": "^5.4.1",
     "@capacitor/keyboard": "^5.0.6",
+    "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.2",
     "@reduxjs/toolkit": "^1.9.6",
     "@stripe/react-stripe-js": "^2.3.1",
