--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "20.7.0",
     "@types/react": "18.2.23",
     "@types/react-dom": "18.2.8",
+    "@vercel/analytics": "^1.1.0",
     "autoprefixer": "10.4.16",
     "capacitor-plugin-safe-area": "^2.0.5",
     "eslint": "8.50.0",
