--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-onesignal": "^3.0.1",
     "react-redux": "^8.1.2",
     "react-select": "^5.7.7",
     "redux-persist": "^6.0.0",
