--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "santou-store",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,6 @@
     "start": "next start",
     "lint": "next lint"
   },
-
   "dependencies": {
     "@capacitor/android": "^5.4.1",
     "@capacitor/core": "^5.4.1",
@@ -30,10 +29,10 @@
     "autoprefixer": "10.4.16",
     "capacitor-plugin-safe-area": "^2.0.5",
     "eslint": "8.50.0",
-    "eslint-config-next": "13.5.3",
+    "eslint-config-next": "^14.0.3",
     "google-map-react": "^2.2.1",
     "leaflet": "^1.9.4",
-    "next": "^13.5.3",
+    "next": "^14.0.3",
     "onesignal-cordova-plugin": "^5.0.2",
     "postcss": "8.4.30",
     "react": "^18.2.0",
