--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-leaflet": "^4.2.1",
     "react-onesignal": "^3.0.1",
     "react-redux": "^8.1.2",
+    "react-scroll": "^1.9.0",
     "react-select": "^5.7.7",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
@@ -53,6 +54,7 @@
     "@capacitor/cli": "^5.4.1",
     "@tanstack/eslint-plugin-query": "^4.34.1",
     "@types/google-map-react": "^2.1.9",
-    "@types/leaflet": "^1.9.7"
+    "@types/leaflet": "^1.9.7",
+    "@types/react-scroll": "^1.8.10"
   }
 }
