--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@capacitor/core": "^5.4.1",
     "@capacitor/ios": "^5.4.1",
     "@capacitor/keyboard": "^5.0.6",
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.14.0",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.2",
     "@react-google-maps/api": "^2.19.2",
@@ -28,6 +30,7 @@
     "@vercel/analytics": "^1.1.0",
     "autoprefixer": "10.4.16",
     "capacitor-plugin-safe-area": "^2.0.5",
+    "cloudinary-react": "^1.8.1",
     "eslint": "8.50.0",
     "eslint-config-next": "^14.0.3",
     "google-map-react": "^2.2.1",
