--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "20.7.0",
     "@types/react": "18.2.23",
     "@types/react-dom": "18.2.8",
+    "@types/react-qr-reader": "^2.1.7",
     "@vercel/analytics": "^1.1.0",
     "autoprefixer": "10.4.16",
     "capacitor-plugin-safe-area": "^2.0.5",
@@ -36,6 +37,7 @@
     "google-map-react": "^2.2.1",
     "leaflet": "^1.9.4",
     "next": "^14.0.3",
+    "next-qrcode": "^2.5.1",
     "onesignal-cordova-plugin": "^5.0.2",
     "postcss": "8.4.30",
     "react": "^18.2.0",
@@ -43,6 +45,8 @@
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
     "react-onesignal": "^3.0.1",
+    "react-qr-reader": "^3.0.0-beta-1",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-redux": "^8.1.2",
     "react-scroll": "^1.9.0",
     "react-select": "^5.8.0",
